Add Task microservice API docs
